<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_1"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_return_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/black_1"
            android:onClick="returnClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/editTask_headline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="编辑任务"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/editTask_name_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addtask_name_head"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTask_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入任务名称"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/editTask_content_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addtask_content_head"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTask_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请描述任务内容"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/editTask_start_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addtask_start_head"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editStart_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="2024-1-1"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_select_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yellow"
                android:text="@string/btn_select"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/editTask_active_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addtask_active_head"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editEnd_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="2024-1-1"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_selectEnd_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yellow"
                android:text="@string/btn_select"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_editTask"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/grey"
            android:onClick="edit"
            android:text="确认修改"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_deleteTask"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            android:onClick="delete"
            android:text="删除任务"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>